submission details endpoint
